[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/theme1.tres" type="Theme" id=1]
[ext_resource path="res://ui/components/ComponentAbility.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 1
border_width_right = 1
border_color = Color( 0, 0, 0, 1 )
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 2.0
content_margin_right = 2.0
bg_color = Color( 0.0941176, 0.0862745, 0.0823529, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[node name="Ability" type="HBoxContainer"]
margin_right = 1062.0
margin_bottom = 24.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="."]
margin_top = 5.0
margin_right = 26.0
margin_bottom = 25.0
text = "Pts"

[node name="InputLevels" type="SpinBox" parent="."]
margin_left = 30.0
margin_right = 104.0
margin_bottom = 30.0
size_flags_horizontal = 5
max_value = 20.0
rounded = true
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 108.0
margin_top = 5.0
margin_right = 150.0
margin_bottom = 25.0
text = "Extra"

[node name="InputExtra" type="SpinBox" parent="."]
margin_left = 154.0
margin_right = 228.0
margin_bottom = 30.0
size_flags_horizontal = 5
max_value = 20.0
rounded = true
align = 1

[node name="Separator1" type="VSeparator" parent="."]
margin_left = 232.0
margin_right = 242.0
margin_bottom = 30.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckProf" type="CheckBox" parent="."]
margin_left = 246.0
margin_right = 311.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 20 )
text = "Prof"

[node name="Separator2" type="VSeparator" parent="."]
margin_left = 315.0
margin_right = 325.0
margin_bottom = 30.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelName" type="Label" parent="."]
margin_left = 329.0
margin_top = 5.0
margin_right = 944.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "Nombre de habilidad (Atributo)"

[node name="Separator3" type="VSeparator" parent="."]
margin_left = 948.0
margin_right = 958.0
margin_bottom = 30.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMod" type="Label" parent="."]
margin_left = 962.0
margin_top = 3.0
margin_right = 1062.0
margin_bottom = 27.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 4
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Total:"
valign = 1

[connection signal="value_changed" from="InputLevels" to="." method="_on_InputLevels_value_changed"]
[connection signal="value_changed" from="InputExtra" to="." method="_on_InputExtra_value_changed"]
[connection signal="toggled" from="CheckProf" to="." method="_on_CheckProf_toggled"]
